# gfs

./: .gitignore  CMakeLists.txt
include/fs/: dirpath.h
include/git/: repo.h
include/utils/: vector.h
src/: dirpath.c  main.c  repo.c  vector.c
